:bug: Fix overlapping mobile menu
#2972

--- a/frontend/scss/components/organisms/search.scss
+++ b/frontend/scss/components/organisms/search.scss
@@ -16,6 +16,7 @@
 @import 'components/atoms/_color.scss';
 
 .#{organism('search')} {
+  z-index: 9999;
 
   &-escaper {
     position: fixed;
